--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>منوی کافه</title>
+  <title>منوی </title>
 
   <!-- جوازگیریپ -->
   <link rel="manifest" href="manifest.json">
@@ -214,4 +214,5 @@
   </script>
 </body>
 </html>
+
 
